--- a/module-admin/src/main/resources/templates/diaryManage/commentForm.html
+++ b/module-admin/src/main/resources/templates/diaryManage/commentForm.html
@@ -2,19 +2,17 @@
     <h3 class="sub-title"><strong>댓글</strong></h3>
 </div>
 <div class="card-block-small p-t-0">
-    <div class="banner-wrap">
-        <div class="banner-select">
-            <div class="banner-list column" id="commentCon">
-            </div>
+    <div class="comment-wrap">
+        <div class="comment-list-con" id="commentCon">
         </div>
     </div>
 </div>
-<!-- // -->
-<script th:inline="javascript">
-    $(function () {
-        diaryCommentController.id = [[${diaryId}]]
-        diaryCommentController.init();
-    });
-</script>
+    <!-- // -->
+    <script th:inline="javascript">
+        $(function () {
+            diaryCommentController.id = [[${diaryId}]]
+            diaryCommentController.init();
+        });
+    </script>
 
 
