--- a/module-admin/src/main/resources/templates/statistics/user.html
+++ b/module-admin/src/main/resources/templates/statistics/user.html
@@ -1,10 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/main}">
 
-</body>
-</html>
+<div layout:fragment="content">
+    <div class="page-body">
+        <div class="row">
+            <form id="searchForm" name="searchForm" onsubmit="return false;">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-block-small">
+                            <div class="row">
+                                <div class="col-lg-3 col-md-6 mb-3">
+                                    <div class="mb-0 form-group row">
+                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
+                                        <div class="input-group input-group-dropdown mb-0">
+                                            <select id="searchType" name="searchType" class="form-select form-control form-control-round custom-select left-select">
+                                                <option value="">- 선택 -</option>
+                                                <option value="email">아이디</option>
+                                                <option value="nickName">닉네임</option>
+                                            </select>
+                                            <input type="text" class="form-control form-control-round" id="searchKeyword" name="searchKeyword">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-1 p-t-20 text-center">
+                                <button class="btn btn-gray m-r-5">초기화</button>
+                                <button class="btn btn-primary" onclick="search();">검색</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+
+            <!-- 그리드 부분(표시를 위해 임의로 넣어둠) -->
+            <div class="col-12">
+                <div class="card">
+<!--                    <div class="row p-20 p-b-0">
+                        <div class="col-12 col-md-6 mb-2 mb-md-0">
+                            <h5><strong>발송이력 검색결과</strong></h5>
+                        </div>
+                    </div>-->
+                    <div class="card-block-small">
+                        <div class="dt-responsive table-responsive">
+                            <div id="order-table_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                                <table id="listTable" class="display" style="width:100%">
+                                    <thead>
+                                    <tr>
+                                        <th>구분</th>
+                                        <th>회원가입</th>
+                                        <th>회원탈퇴</th>
+                                        <th>휴면회원</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                    <tfoot>
+                                    <tr>
+                                        <th>합계</th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                    </tr>
+                                    </tfoot>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- //그리드 부분(표시를 위해 임의로 넣어둠) -->
+        </div>
+    </div>
+
+    <script th:inline="javascript">
+
+    </script>
+</div>
